[gd_scene load_steps=5 format=3 uid="uid://wkhjwukfqcut"]

[ext_resource type="Script" path="res://Weapons/Ammo/WeaponAmmo.gd" id="1_lvr58"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a04c0"]
radius = 6.5

[sub_resource type="Gradient" id="Gradient_u6chs"]
offsets = PackedFloat32Array(0.0944206, 0.416309, 1)
colors = PackedColorArray(0.843137, 0, 0, 1, 0.8, 0.439216, 0.105882, 1, 0.192157, 0.192157, 0.192157, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_07w55"]
gradient = SubResource("Gradient_u6chs")
width = 10
height = 25
fill_from = Vector2(1, 0)
fill_to = Vector2(1, 0.937322)

[node name="WeaponAmmo" type="Area2D"]
rotation = 1.5708
script = ExtResource("1_lvr58")

[node name="AmmoCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_a04c0")

[node name="AmmoSprite" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_07w55")

[node name="KillTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="KillTimer" to="." method="_on_kill_timer_timeout"]
